kubernetes-docs/2.service-mesh/istio/4.traffic-management/canary.destination_rule.yml
kind: DestinationRule
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: fleetman-staff-service
spec:
  host: fleetman-staff-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
