kubernetes-docs/2.service-mesh/istio/4.traffic-management/canary.virtual_service.yml
kind: VirtualService
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: fleetman-staff-service
spec:
  hosts:
  - fleetman-staff-service
  http:
  - route:
    - destination:
        host: fleetman-staff-service
        subset: v1
      weight: 0
    - destination:
        host: fleetman-staff-service
        subset: v2
      weight: 100
